fix(AddressBook): broken style after merge

--- a/src/components/common/AddressBook/AddressBook.scss
+++ b/src/components/common/AddressBook/AddressBook.scss
@@ -3,7 +3,7 @@
 $heading-height: 45px;
 
 .address-book {
-    .list {
+    .menu {
         top: 60px !important;
         display: flex;
         flex-direction: column;
